force-app/main/default/objects/Webcasts_Survey_QA_Data__c/Webcasts_Survey_QA_Data__c.object-meta.xml
<CustomObject>
    <label>Webcasts Survey QA Data</label>
    <nameField>
        <label>Webcasts Survey QA Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webcasts Survey QA Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>