force-app/main/default/objects/Webcasts_Survey_QA_Data__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Webcasts Survey QA Data</relationshipLabel>
    <relationshipName>Webcasts_Survey_QA_Data</relationshipName>
    <type>Lookup</type>
</CustomField>