force-app/main/default/objects/Webcasts_Survey_QA_Data__c/fields/External_Webcast_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Webcast_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Webcast ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>