force-app/main/default/objects/Webcasts_Survey_QA_Data__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Webcasts Survey QA Data</relationshipLabel>
    <relationshipName>Webcasts_Survey_QA_Data</relationshipName>
    <type>Lookup</type>
</CustomField>